Fixed misalignment when music is not enabled

--- a/src/style.css
+++ b/src/style.css
@@ -147,7 +147,7 @@ html {
     cursor: pointer;
 }
 
-.github{
+.github-loop{
     margin-top: 10px;
 }
 
